--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1>Hi this is my Freinds that play minecraft</h1>
 		<h3>Max, Alexa, Gabe, Nathan, Guse (I think I miss spealed your name), Carisa,)</h3>
 
-		<h4>your name might be miss spealled or is not on here If it is not contat me <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWsTNGnCgRzsPnbMHcJMjnlcvHTSjMlTmwdSjpdtgQdbcSclgdZrzvbcgPcpWshdQcgkVVmdv">Here at fireaim2010@gmail.com</a></h4>
+		<h4>your name might be miss spealled or is not on here If it is not contat me <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWsTNGnCgRzsPnbMHcJMjnlcvHTSjMlTmwdSjpdtgQdbcSclgdZrzvbcgPcpWshdQcgkVVmdv">Here </a></h4>
 
 
 
