--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<h1>Hi this is my Freinds that play minecraft</h1>
 		<h3>Max, Alexa, Gabe, Nathan, Gus, Carisa,</h3>
-		<img>MM.png</img>
+		<png>MM.png</png>
 
 		<h4>your name might be miss spealled or is not on here If it is not contat me <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWsTNGnCgRzsPnbMHcJMjnlcvHTSjMlTmwdSjpdtgQdbcSclgdZrzvbcgPcpWshdQcgkVVmdv">Here </a></h4>
 
