--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
 	<head>
 		<title>Minecraft</title>
-		<p style="background-image: url('MM.png');">
+		
 
 	</head>
+	<style>
+		body {
+  			background-image: url('MM.png');
+			}
+	</style>
 
 	<body>
 
